--- a/.editorconfig
+++ b/.editorconfig
@@ -6,6 +6,7 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 indent_size = 2
-
-[*.swift]
 indent_style = tab
+
+[*.{json,yml}]
+indent_style = space
