Update SwiftLint rules

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,6 +1,3 @@
-disabled_rules:
-  - closure_parameter_position
-  - identifier_name
 opt_in_rules:
   - anyobject_protocol
   - attributes
@@ -19,6 +16,7 @@ opt_in_rules:
   - fallthrough
   - first_where
   - flatmap_over_map_reduce
+  - indentation_width
   - legacy_random
   - literal_expression_end_indentation
   - lower_acl_than_parent
@@ -39,14 +37,6 @@ line_length:
   ignores_urls: true
   ignores_comments: true
   ignores_interpolated_strings: true
-function_body_length:
-  warning: 100
-type_body_length:
-  warning: 300
-  error: 400
 excluded:
   - Sources/Tests
-  - Sources/LinuxMain.swift
-cyclomatic_complexity:
-  ignores_case_statements: true
 indentation: tabs
