--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,5 +1,8 @@
+disabled_rules:
+  - closure_parameter_position
+  - identifier_name
+  - multiple_closures_with_trailing_closure
 opt_in_rules:
-  - anyobject_protocol
   - attributes
   - closure_end_indentation
   - closure_parameter_position
@@ -12,7 +15,6 @@ opt_in_rules:
   - empty_count
   - empty_string
   - explicit_init
-  - extension_access_modifier
   - fallthrough
   - first_where
   - flatmap_over_map_reduce
@@ -24,6 +26,7 @@ opt_in_rules:
   - redundant_nil_coalescing
   - redundant_type_annotation
   - sorted_first_last
+  - sorted_imports
   - static_operator
   - toggle_bool
   - unavailable_function
@@ -37,6 +40,11 @@ line_length:
   ignores_urls: true
   ignores_comments: true
   ignores_interpolated_strings: true
-excluded:
-  - Sources/Tests
+function_body_length:
+  warning: 100
+type_body_length:
+  warning: 300
+  error: 400
+cyclomatic_complexity:
+  ignores_case_statements: true
 indentation: tabs
