Exclude Swift artifacts from Swiftlint

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -34,6 +34,9 @@ opt_in_rules:
   - untyped_error_in_catch
   - vertical_parameter_alignment_on_call
   - yoda_condition
+excluded:
+  - .build
+  - .swiftpm
 indentation_width:
   include_comments: false
 line_length:
